[package]
name = "try_gluon"
version = "0.4.0"
authors = ["Markus <marwes91@gmail.com>"]

license = "MIT"

[workspace]
members = ["gluon_wasm"]

[[bin]]
name = "try_gluon"
path = "src/app/main.rs"

[dependencies]
futures = "0.1.0"
iron = "0.6.0"
persistent = "0.4.0"
staticfile = "0.5.0"
mount = "0.4.0"
urlencoded = "0.6.0"
serde_json = "0.7.0"
log = "0.3.6"

gluon = "0.7.0"
gluon_format = "0.7.0"

[dev-dependencies]
env_logger = "0.5"
